--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
                 
-                <form class="d-flex me-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search topics..." aria-label="Search">
+                <form class="d-flex me-3" method="get" action="{% url 'search' %}">
+                    <input class="form-control me-2" type="text" name="keyword" value="{{ query }}" placeholder="Search topics..." aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
                 </form>
 
