--- a/templates/category_list.html
+++ b/templates/category_list.html
@@ -10,7 +10,7 @@
             </div>
             <div class="row g-4">
                 {% for post in posts %}
-                <div class="col-md-4">
+                <div class="col-md-4" >
                     <div class="card h-100 border-0 shadow-sm blog-card">
                         <img src="{{ post.featured_image.url }}" class="card-img-top" alt="Blog Image">
                         <div class="card-body">
@@ -20,7 +20,7 @@
                         </div>
                         <div class="card-footer bg-white border-0 d-flex justify-content-between align-items-center">
                             <small class="text-muted text-small">{{post.created_at | timesince}} ago | {{ post.author }}</small>
-                            <a href="#" class="btn btn-sm btn-outline-dark">Read More</a>
+                            <a href="{% url 'blogs' post.slug %}" class="btn btn-sm btn-outline-dark">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -29,5 +29,5 @@
         </section>
 
     </div>
-    
+
 {% endblock %}
