--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
             <a href="#featured" class="btn btn-light bg-primary text-white rounded-pill px-5">Start Reading</a>
         </div>
     </header>
-    
+
     <div class="container my-5">
         
         <div class="row mb-4">
@@ -32,7 +32,7 @@
             <div class="row g-4">
                 {% for post in featured_posts %}
                 <div class="col-md-4">
-                    <div class="card h-100 border-0 shadow-sm blog-card">
+                    <div class="card h-100 border-0 shadow-sm blog-card" >
                         <img src="{{ post.featured_image.url }}" class="card-img-top" alt="Blog Image">
                         <div class="card-body">
                             <span class="badge bg-warning mb-2">{{ post.category }}</span>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="card-footer bg-white border-0 d-flex justify-content-between align-items-center">
                             <small class="text-muted text-small">{{post.created_at | timesince}} ago | {{ post.author }}</small>
-                            <a href="#" class="btn btn-sm btn-outline-dark">Read More</a>
+                            <a href="{% url 'blogs' post.slug %}" class="btn btn-sm btn-outline-dark" target="_blank">Read More</a>
                         </div>
                     </div>
                 </div>
