--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" href="{% url 'home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://yash4313.github.io/Portfolio/" target="_blank">About</a></li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}</a></li>
+                    {% endif %}
                 </ul>
                 
                 <form class="d-flex me-3" method="get" action="{% url 'search' %}">
@@ -32,13 +34,30 @@
                 </form>
 
                 <div class="d-flex gap-2">
-                    <a href="#" class="btn btn-outline-primary">Login</a>
-                    <a href="#" class="btn btn-primary">Sign Up</a>
+                    <a href="{% url 'login' %}" class="btn btn-outline-primary">Login</a>
+                    <a href="{% url 'register' %}" class="btn btn-primary">Sign Up</a>
                 </div>
+
+                {% if user.is_authenticated %}
+                <div class="d-flex gap-2">
+                    <a href="{% url 'logout' %}" class="btn btn-outline-danger" style="margin-left: 5px;">Logout</a>
+                </div>
+                {% endif %}
+                
             </div>
         </div>
     </nav>
 
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show text-center" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            </div>
+        {% endfor %}
+    {% endif %}
+
+    
 
 {% comment %} main content {% endcomment %}
 
@@ -58,7 +77,7 @@
                     <h5>Quick Links</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-decoration-none text-grey hover-white" href="{% url 'home' %}">Home</a></li>
-                        <li><a class="text-decoration-none text-grey hover-white" href="#">About</a></li>
+                        <li><a class="text-decoration-none text-grey hover-white" href="https://yash4313.github.io/Portfolio/" target="_blank">About</a></li>
                         <li><a class="text-decoration-none text-grey hover-white" href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -66,7 +85,7 @@
                     <h5>Categories</h5>
                     <ul class="list-unstyled text-small">
                         {% for category in categories %}
-                        <li><a class="text-decoration-none text-grey hover-white" href="#">{{ category }}</a></li>
+                        <li><a class="text-decoration-none text-grey hover-white" href="{% url 'category_list' category.id %}">{{ category }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
