--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,18 @@
                     <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
                 </form>
 
+                {% if not user.is_authenticated %}
                 <div class="d-flex gap-2">
                     <a href="{% url 'login' %}" class="btn btn-outline-primary">Login</a>
                     <a href="{% url 'register' %}" class="btn btn-primary">Sign Up</a>
                 </div>
 
-                {% if user.is_authenticated %}
+                {% else %}
                 <div class="d-flex gap-2">
                     <a href="{% url 'logout' %}" class="btn btn-outline-danger" style="margin-left: 5px;">Logout</a>
+                </div>
+                <div class="d-flex gap-2">
+                    <a href="{% url 'dashboard' %}" class="btn btn-primary" style="margin-left: 5px;">Dashboard</a>
                 </div>
                 {% endif %}
                 
