--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -1,22 +1,22 @@
 <!-- ================= SIDEBAR ================= -->
-    <aside class="col-12 col-md-3 col-lg-2 bg-dark text-white p-3">
-      <h4 class="text-center mb-4">{{ user }}</h4>
+<aside class="col-12 col-md-3 col-lg-2 bg-dark text-white p-3">
+  <h4 class="text-center mb-4">{{ user }}</h4>
 
-      <ul class="nav nav-pills flex-column gap-1">
-        <li class="nav-item">
-          <a class="nav-link text-white {% if '/dashboard/' == request.path %}bg-primary{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white {% if '/categories/' in request.path %}bg-primary{% endif %}" href="{% url 'categories' %}">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Posts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Comments</a>
-        </li>
-        <li class="nav-item mt-3">
-          <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
-        </li>
-      </ul>
-    </aside>
+  <ul class="nav nav-pills flex-column gap-1">
+    <li class="nav-item">
+      <a class="nav-link text-white {% if '/dashboard/' == request.path %}bg-primary{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white {% if '/categories/' in request.path %}bg-primary{% endif %}" href="{% url 'categories' %}">Categories</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white {% if '/posts/' in request.path %}bg-primary{% endif %}" href="{% url 'posts' %}">Posts</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-white" href="#">Comments</a>
+    </li>
+    <li class="nav-item mt-3">
+      <a class="nav-link text-danger" href="{% url 'logout' %}">Logout</a>
+    </li>
+  </ul>
+</aside>
